gac_sb/objects/Note_De_Frais_Nature_Depense__c.object
<CustomObject>
    <fields>
        <fullName>Actif__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Actif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aide__c</fullName>
        <label>Aide</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Categorie__c</fullName>
        <label>Catégorie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Autres (TVA non récupérable)</fullName>
                </value>
                <value>
                    <fullName>Autres (TVA récupérable)</fullName>
                </value>
                <value>
                    <fullName>Avion</fullName>
                </value>
                <value>
                    <fullName>Carburant</fullName>
                </value>
                <value>
                    <fullName>Déjeuner</fullName>
                </value>
                <value>
                    <fullName>Dîner</fullName>
                </value>
                <value>
                    <fullName>Frais kilométrique</fullName>
                </value>
                <value>
                    <fullName>Hotêl (nuitée)</fullName>
                </value>
                <value>
                    <fullName>Location véhicule</fullName>
                </value>
                <value>
                    <fullName>Parking / Métro / Bus</fullName>
                </value>
                <value>
                    <fullName>Péage</fullName>
                </value>
                <value>
                    <fullName>Petit Déjeuner</fullName>
                </value>
                <value>
                    <fullName>Poste</fullName>
                </value>
                <value>
                    <fullName>Repas avec invités tiers</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Brésil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>TTC</fullName>
                </value>
                <value>
                    <fullName>Frais kilométrique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>doInclude__c</fullName>
        <formula>Actif__c &amp;&amp; 

(ISPICKVAL( Pays__c , &apos;France&apos; ) &amp;&amp;  CONTAINS(&apos;FR&apos;, $Setup.AppNDFSetting__c.Pays__c)) ||
(ISPICKVAL( Pays__c , &apos;Brésil&apos; ) &amp;&amp;  CONTAINS(&apos;BR&apos;, $Setup.AppNDFSetting__c.Pays__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>doInclude</label>
        <type>Checkbox</type>
    </fields>
    <label>Nature dépense</label>
    <nameField>
        <label>Libellé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natures dépense</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>